@@ -26,21 +26,22 @@
 package org.aoju.bus.core.toolkit;
 
 import org.aoju.bus.core.annotation.Alias;
+import org.aoju.bus.core.beans.NullWrapper;
 import org.aoju.bus.core.collection.UniqueKeySet;
 import org.aoju.bus.core.convert.Convert;
 import org.aoju.bus.core.exception.InternalException;
 import org.aoju.bus.core.lang.Assert;
-import org.aoju.bus.core.lang.Filter;
 import org.aoju.bus.core.lang.Normal;
 import org.aoju.bus.core.lang.Symbol;
 import org.aoju.bus.core.map.WeakMap;
 
 import java.lang.reflect.*;
 import java.util.*;
+import java.util.function.Predicate;
 
 /**
  * 反射工具类.
- * 提供调用getter/setter方法, 访问私有变量, 调用私有方法, 获取泛型类型Class, 被AOP过的真实类等工具函数.
+ * 提供调用getter/setter方法, 访问私有变量, 调用私有方法, 获取泛型类型Class, 被AOP过的真实类等工具函数
  *
  * @author Kimi Liu
  * @since Java 17+
@@ -413,7 +414,7 @@ public class ReflectKit {
      */
     public static <T> Constructor<T>[] getConstructors(Class<T> beanClass) throws SecurityException {
         Assert.notNull(beanClass);
-        return (Constructor<T>[]) CONSTRUCTORS_CACHE.computeIfAbsent(beanClass, () -> getConstructorsDirectly(beanClass));
+        return (Constructor<T>[]) CONSTRUCTORS_CACHE.computeIfAbsent(beanClass, (key) -> getConstructorsDirectly(beanClass));
     }
 
     /**
@@ -449,7 +450,7 @@ public class ReflectKit {
      */
     public static Field[] getFields(Class<?> beanClass) throws SecurityException {
         Assert.notNull(beanClass);
-        return FIELDS_CACHE.computeIfAbsent(beanClass, () -> getFields(beanClass, true));
+        return FIELDS_CACHE.computeIfAbsent(beanClass, (key) -> getFields(beanClass, true));
     }
 
     /**
@@ -461,7 +462,7 @@ public class ReflectKit {
      * @return 字段列表
      * @throws SecurityException 安全检查异常
      */
-    public static Field[] getFields(Class<?> beanClass, Filter<Field> fieldFilter) throws SecurityException {
+    public static Field[] getFields(Class<?> beanClass, Predicate<Field> fieldFilter) throws SecurityException {
         return ArrayKit.filter(getFields(beanClass), fieldFilter);
     }
 
@@ -684,17 +685,18 @@ public class ReflectKit {
             return null;
         }
 
+        Method result = null;
         final Method[] methods = getMethods(clazz);
         if (ArrayKit.isNotEmpty(methods)) {
-            for (Method method : methods) {
-                if (StringKit.equals(methodName, method.getName(), ignoreCase)) {
-                    if (ArrayKit.isEmpty(paramTypes) || ClassKit.isAllAssignableFrom(method.getParameterTypes(), paramTypes)) {
-                        return method;
-                    }
+            for (final Method method : methods) {
+                if (StringKit.equals(methodName, method.getName(), ignoreCase)
+                        && ClassKit.isAllAssignableFrom(method.getParameterTypes(), paramTypes)
+                        && (result == null || result.getReturnType().isAssignableFrom(method.getReturnType()))) {
+                    result = method;
                 }
             }
         }
-        return null;
+        return result;
     }
 
     /**
@@ -722,7 +724,7 @@ public class ReflectKit {
      * @return 过滤后的方法列表
      * @throws SecurityException 安全异常
      */
-    public static Method[] getMethods(Class<?> clazz, Filter<Method> filter) throws SecurityException {
+    public static Method[] getMethods(Class<?> clazz, Predicate<Method> filter) throws SecurityException {
         if (null == clazz) {
             return null;
         }
@@ -734,7 +736,7 @@ public class ReflectKit {
 
         final List<Method> methodList = new ArrayList<>();
         for (Method method : methods) {
-            if (filter.accept(method)) {
+            if (filter.test(method)) {
                 methodList.add(method);
             }
         }
@@ -751,7 +753,7 @@ public class ReflectKit {
     public static Method[] getMethods(Class<?> beanClass) throws SecurityException {
         Assert.notNull(beanClass);
         return METHODS_CACHE.computeIfAbsent(beanClass,
-                () -> getMethods(beanClass, true, true));
+                key -> getMethods(beanClass, false, Objects.equals(Object.class, beanClass)));
     }
 
     /**
@@ -769,7 +771,7 @@ public class ReflectKit {
      * @return 方法列表
      * @throws SecurityException 安全检查异常
      */
-    public static Method[] getMethods(Class<?> beanClass, boolean withSupers, boolean withMethodFromObject) throws SecurityException {
+    public static Method[] getMethods(final Class<?> beanClass, final boolean withSupers, final boolean withMethodFromObject) throws SecurityException {
         Assert.notNull(beanClass);
 
         if (beanClass.isInterface()) {
@@ -815,7 +817,7 @@ public class ReflectKit {
      * @return 是否为hashCode方法
      */
     public static boolean isHashCodeMethod(Method method) {
-        return (null != method && ObjectKit.equal(method.getName(), Normal.HASHCODE) && method.getParameterTypes().length == 0);
+        return (null != method && ObjectKit.equals(method.getName(), Normal.HASHCODE) && method.getParameterTypes().length == 0);
     }
 
     /**
@@ -825,7 +827,7 @@ public class ReflectKit {
      * @return 是否为toString方法
      */
     public static boolean isToStringMethod(Method method) {
-        return (null != method && ObjectKit.equal(method.getName(), Normal.TOSTRING) && method.getParameterTypes().length == 0);
+        return (null != method && ObjectKit.equals(method.getName(), Normal.TOSTRING) && method.getParameterTypes().length == 0);
     }
 
     /**
@@ -905,7 +907,7 @@ public class ReflectKit {
      */
     public static <T> T newInstance(String clazz) throws InternalException {
         try {
-            return (T) Class.forName(clazz).newInstance();
+            return (T) Class.forName(clazz).getConstructor().newInstance();
         } catch (Exception e) {
             throw new InternalException(StringKit.format("Instance class [{}] error!", clazz), e);
         }
@@ -1073,7 +1075,7 @@ public class ReflectKit {
                     actualArgs[i] = ClassKit.getDefaultValue(parameterTypes[i]);
                 } else if (false == parameterTypes[i].isAssignableFrom(args[i].getClass())) {
                     //对于类型不同的字段，尝试转换，转换失败则使用原对象类型
-                    final Object targetValue = Convert.convert(parameterTypes[i], args[i]);
+                    final Object targetValue = Convert.convertQuietly(parameterTypes[i], args[i], args[i]);
                     if (null != targetValue) {
                         actualArgs[i] = targetValue;
                     }
@@ -1139,6 +1141,137 @@ public class ReflectKit {
             accessibleObject.setAccessible(true);
         }
         return accessibleObject;
+    }
+
+
+    /**
+     * 获取jvm定义的Field Descriptors（字段描述）
+     *
+     * @param executable 可执行的反射对象
+     * @return 描述符
+     *
+     * <p>例：</p>
+     * <ul>
+     *     <li>{@code getDescriptor(Object.class.getMethod("hashCode"))                                                           // "()I"}</li>
+     *     <li>{@code getDescriptor(Object.class.getMethod("toString"))                                                           // "()Ljava/lang/String;"}</li>
+     *     <li>{@code getDescriptor(Object.class.getMethod("equals", Object.class))                                               // "(Ljava/lang/Object;)Z"}</li>
+     *     <li>{@code getDescriptor(ReflectUtil.class.getDeclaredMethod("appendDescriptor", Class.clas, StringBuilder.class))     // "(Ljava/lang/Class;Ljava/lang/StringBuilder;)V"}</li>
+     *     <li>{@code getDescriptor(ArrayUtil.class.getMethod("isEmpty", Object[].class))                                         // "([Ljava/lang/Object;)Z"}</li>
+     * </ul>
+     */
+    public static String getDescriptor(final Executable executable) {
+        final StringBuilder stringBuilder = new StringBuilder();
+        stringBuilder.append('(');
+        final Class<?>[] parameters = executable.getParameterTypes();
+        for (final Class<?> parameter : parameters) {
+            stringBuilder.append(getDescriptor(parameter));
+        }
+        if (executable instanceof Method) {
+            final Method method = (Method) executable;
+            return stringBuilder.append(')').append(getDescriptor(method.getReturnType())).toString();
+        } else if (executable instanceof Constructor) {
+            return stringBuilder.append(")V").toString();
+        }
+        throw new IllegalArgumentException("Unknown Executable: " + executable);
+    }
+
+    /**
+     * 获取类型描述符，这是编译成class文件后的二进制名称
+     *
+     * @param clazz 类
+     * @return 描述字符串
+     *
+     * <p>例：</p>
+     * <ul>
+     *     <li>{@code getDescriptor(boolean.class)                        "Z"}</li>
+     *     <li>{@code getDescriptor(Boolean.class)                        "Ljava/lang/Boolean;"}</li>
+     *     <li>{@code getDescriptor(double[][][].class)                   "[[[D"}</li>
+     *     <li>{@code getDescriptor(int.class)                            "I"}</li>
+     *     <li>{@code getDescriptor(Integer.class)                        "Ljava/lang/Integer;"}</li>
+     * </ul>
+     */
+    public static String getDescriptor(final Class<?> clazz) {
+        final StringBuilder stringBuilder = new StringBuilder();
+        Class<?> currentClass;
+        for (currentClass = clazz;
+             currentClass.isArray();
+             currentClass = currentClass.getComponentType()) {
+            // 如果当前是数组描述符
+            stringBuilder.append('[');
+        }
+        if (currentClass.isPrimitive()) {
+            // 只有下面九种基础数据类型以及数组，才有独立的描述符
+            final char descriptor;
+            // see sun.invoke.util.XWrapper
+            // These must be in the order defined for widening primitive conversions in JLS 5.1.2
+            if (currentClass == boolean.class) {
+                descriptor = 'Z';
+            } else if (currentClass == byte.class) {
+                descriptor = 'B';
+            } else if (currentClass == short.class) {
+                descriptor = 'S';
+            } else if (currentClass == char.class) {
+                descriptor = 'C';
+            } else if (currentClass == int.class) {
+                descriptor = 'I';
+            } else if (currentClass == long.class) {
+                descriptor = 'J';
+            } else if (currentClass == float.class) {
+                descriptor = 'F';
+            } else if (currentClass == double.class) {
+                descriptor = 'D';
+            } else if (currentClass == void.class) {
+                // VOID must be the last type, since it is "assignable" from any other type:
+                descriptor = 'V';
+            } else {
+                throw new AssertionError();
+            }
+            stringBuilder.append(descriptor);
+        } else {
+            // 否则一律是 "L"+类名.replace('.', '/')+";"格式的对象类型
+            stringBuilder.append('L').append(currentClass.getName().replace('.', '/')).append(';');
+        }
+        return stringBuilder.toString();
+    }
+
+    /**
+     * 检查用户传入参数：
+     * <ul>
+     *     <li>1、忽略多余的参数</li>
+     *     <li>2、参数不够补齐默认值</li>
+     *     <li>3、通过NullWrapperBean传递的参数,会直接赋值null</li>
+     *     <li>4、传入参数为null，但是目标参数类型为原始类型，做转换</li>
+     *     <li>5、传入参数类型不对应，尝试转换类型</li>
+     * </ul>
+     *
+     * @param method 方法
+     * @param args   参数
+     * @return 实际的参数数组
+     */
+    private static Object[] actualArgs(final Method method, final Object[] args) {
+        final Class<?>[] parameterTypes = method.getParameterTypes();
+        final Object[] actualArgs = new Object[parameterTypes.length];
+        if (null != args) {
+            for (int i = 0; i < actualArgs.length; i++) {
+                if (i >= args.length || null == args[i]) {
+                    // 越界或者空值
+                    actualArgs[i] = ClassKit.getDefaultValue(parameterTypes[i]);
+                } else if (args[i] instanceof NullWrapper) {
+                    //如果是通过NullWrapperBean传递的null参数,直接赋值null
+                    actualArgs[i] = null;
+                } else if (false == parameterTypes[i].isAssignableFrom(args[i].getClass())) {
+                    //对于类型不同的字段，尝试转换，转换失败则使用原对象类型
+                    final Object targetValue = Convert.convert(parameterTypes[i], args[i]);
+                    if (null != targetValue) {
+                        actualArgs[i] = targetValue;
+                    }
+                } else {
+                    actualArgs[i] = args[i];
+                }
+            }
+        }
+
+        return actualArgs;
     }
 
     /**
